# RBE-594

./: .gitignore
conveyorbelt_gazebo/: CMakeLists.txt  package.xml
conveyorbelt_gazebo/launch/: gazebo.launch
conveyorbelt_gazebo/models/conveyor_belt/: model.sdf
conveyorbelt_gazebo/models/ramp/: model.config  model.sdf
conveyorbelt_gazebo/models/ramp/meshes/: ramp.dae
conveyorbelt_gazebo/worlds/: conveyorbelt.world
conveyorbelt_msgs/: CMakeLists.txt  package.xml
fanuc/: CMakeLists.txt  package.xml
fanuc/config/: fake_controllers.yaml  fanuc.srdf  gazebo_fanuc.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
fanuc/kinematics/: CMakeLists.txt  package.xml  plugin.xml
fanuc/kinematics/include/kinematics/: fanuc_kinematics.h  kinematics.h
fanuc/kinematics/src/: estop.py  forward_kinematics.py  inverse_kinematics.py
fanuc/kinematics/srv/: InverseKinematics.srv
fanuc/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
fanuc/src/mesh/: upper_link.stl
fanuc/src/urdf/: fanuc.urdf
fanuc/urdf/: fanuc.urdf
fanuc/urdf/mesh/: end_effector.stl  fixed_base.stl
fanuc_kinematics_plugin/: CMakeLists.txt  fanuc_kinematics_plugin.xml  package.xml
fanuc_kinematics_plugin/include/fanuc_kinematics_plugin/: fanuc_kinematics_plugin.h
fanuc_kinematics_plugin/src/: fanuc_kinematics_plugin.cpp
fanuc_m430ia/fanuc_m430ia_interface/: CMakeLists.txt  package.xml
fanuc_m430ia/fanuc_m430ia_interface/fanuc_m430ia_interface/: CMakeLists.txt  package.xml
fanuc_m430ia/fanuc_m430ia_interface/fanuc_m430ia_interface/launch/: interface.launch
fanuc_m430ia/fanuc_m430ia_interface/fanuc_m430ia_interface/src/: interface.py
fanuc_m430ia/fanuc_m430ia_interface/launch/: chutes.launch  estop.launch  interface.launch
fanuc_m430ia/fanuc_m430ia_interface/src/: chutes.py  estop.py  interface.py
fanuc_m430ia/fanuc_m430ia_moveit/: .setup_assistant  CMakeLists.txt  package.xml
fanuc_m430ia/fanuc_m430ia_moveit/config/: fake_controllers.yaml  fanuc_m430ia.srdf  gazebo_fanuc_m430ia.urdf  kinematics.yaml  ompl_planning.yaml  stomp_planning.yaml
fanuc_m430ia/fanuc_m430ia_moveit/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  fanuc_m430ia2f_moveit_controller_manager.launch.xml  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
fanuc_m430ia/fanuc_m430ia_moveit/tests/: moveit_planning_execution.xml
fanuc_m430ia/fanuc_m430ia_moveit_test/: .setup_assistant  CMakeLists.txt  package.xml
fanuc_m430ia/fanuc_m430ia_moveit_test/config/: fake_controllers.yaml  fanuc_m430ia.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
fanuc_m430ia/fanuc_m430ia_moveit_test/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_controllers.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  tune_pid.launch
fanuc_m430ia/fanuc_m430ia_support/: CMakeLists.txt  package.xml
fanuc_m430ia/fanuc_m430ia_support/launch/: fanuc_m430ia.launch  load_m430ia.launch  robot_interface_streaming_m430ia.launch  robot_state_visualize_m430ia.launch  test_m430ia.launch
fanuc_m430ia/fanuc_m430ia_support/meshes/gripper/: end_effector.stl  finger.stl
fanuc_m430ia/fanuc_m430ia_support/meshes/m430ia/visual/: base.stl  link_3.stl
fanuc_m430ia/fanuc_m430ia_support/tests/: roslaunch_test.xml
fanuc_m430ia/fanuc_m430ia_support/urdf/: m430ia.urdf  m430ia.xacro  m430ia_macro.xacro
fanuc_m430ia/fanuc_resources/: CMakeLists.txt
fanuc_m430ia/fanuc_run/: estop.launch  test.launch
fanuc_m430ia/fanuc_simulation/: Conveyor.scene
fanuc_m430ia_ikfast_plugin/: CMakeLists.txt  fanuc_m430ia_ikfast_plugin_description.xml  package.xml
fanuc_m430ia_ikfast_plugin/src/: fanuc_m430ia_ikfast_plugin.cpp
ros_conveyorbelt/: CMakeLists.txt  package.xml
ros_conveyorbelt/include/ros_conveyorbelt/: ros_conveyorbelt_plugin.hpp
ros_conveyorbelt/src/: ros_conveyorbelt_plugin.cpp
vision/waste_vision/: CMakeLists.txt  package.xml
vision/waste_vision/msg/: ClassifiedObject.msg  ClassifiedPoint.msg  CroppedObject.msg  PointArray.msg
vision/waste_vision/scripts/: classifier.py  convert_labels_to_world_centers.py  detect_and_crop_onnx.py  full_vision.py  generate_pick_path_with_classes.py  image_pub.py  test_publisher.py  yolo_crop.py
vision/waste_vision/src/part1_complete/: README.md
vision/waste_vision/src/part1_complete/example_pic/: labels.txt
vision/waste_vision/src/part1a_complete/: README.md  example_labels.txt  example_output.txt
vision/waste_vision/src/part3_complete/: README.md  example_path_xy.txt  generate_path_camera_coords.py
vision/waste_vision/src/part3_complete_v2/: README.md  example_labels.txt  generate_path_world_coords_plot_final.py  path_world_mm.txt
vision/waste_vision/src/part3_complete_v3/: README.md  generate_pick_path_with_classes.py  object_pick_path_mm.txt
