<?xml version="1.0"?>
<package format="2">
  <name>fanuc_kinematics_plugin</name>
  <version>0.0.0</version>
  <description>The FANUC kinematics plugin package</description>

  <maintainer email="gabbyvanner@todo.todo">gabbyvanner</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_kinematics</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>

  <build_export_depend>moveit_ros_planning</build_export_depend>
  <build_export_depend>moveit_kinematics</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>moveit_core</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>cmakeme</build_depend>

  <export>
    <moveit_core plugin="${prefix}/fanuc_kinematics_plugin.xml"/>
  </export>

</package>
