<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_conveyorbelt</name>
  <version>0.0.0</version>
  <description>IFRA-Cranfield (Cranfield University, UK). Package: ROS ConveyorBelt for Gazebo Simulation</description>

  <author>Mikel Bueno Viso</author>
  <maintainer email="Mikel.Bueno-Viso@cranfield.ac.uk">Mikel Bueno Viso</maintainer>
  
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>gazebo_dev</depend>
  <depend>gazebo_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>conveyorbelt_msgs</exec_depend>
  
  <build_depend>conveyorbelt_msgs</build_depend>

</package>
