<?xml version="1.0"?>
<package format="2">
  <name>fanuc_m430ia_interface</name>
  <version>0.0.0</version>
  <description>The FANUC MoveIt interface package</description>

  <maintainer email="gabbyvanner@todo.todo">gabbyvanner</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>rospy</build_depend>

  <build_export_depend>moveit_ros_planning_interface</build_export_depend>
  <build_export_depend>moveit_ros_planning</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>moveit_core</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>fanuc_m430ia_support</exec_depend>
  <exec_depend>fanuc_m430ia_moveitt</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>cmakeme</build_depend>
</package>
